--- a/vagrantfile
+++ b/vagrantfile
@@ -20,7 +20,18 @@ $run_test_scenario_script = <<SCRIPT
   exit $LASTEXITCODE
 SCRIPT
 
-def run_octopus_scenario(config, scenario, configuration_params = nil)
+def publish_logs(config, scenario, log_files) 
+  log_files.each do |file|
+    dest = file.gsub(':', '').gsub('/', '-')
+    config.vm.provision "winrm-file-download" do |winrm|
+      winrm.source = file
+      winrm.destination = "logs/#{scenario}-#{dest}"
+    end
+    config.vm.provision "shell", inline: "write-output \"##teamcity[publishArtifact 'logs/#{scenario}-#{dest}']\""
+  end
+end
+
+def run_octopus_scenario(config, scenario, log_files, configuration_params = nil)
   config.vm.provision "shell", inline: "write-output \"##teamcity[blockOpened name='Running Scenario #{scenario}']\""
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "#{scenario}.ps1"
@@ -31,10 +42,11 @@ def run_octopus_scenario(config, scenario, configuration_params = nil)
   end
   config.vm.provision "shell", inline: "write-output \"##teamcity[blockClosed name='Running Scenario #{scenario}']\""
   config.vm.provision "shell", path: "Tests/surface-logs.ps1"
+  publish_logs(config, scenario, log_files)
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', scenario.downcase)
 end
 
-def run_tentacle_scenario(config, scenario, configuration_params = nil)
+def run_tentacle_scenario(config, scenario, log_files, configuration_params = nil)
   config.vm.provision "shell", inline: "write-output \"##teamcity[blockOpened name='Running Scenario #{scenario}']\""
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "#{scenario}.ps1"
@@ -45,6 +57,7 @@ def run_tentacle_scenario(config, scenario, configuration_params = nil)
   end
   config.vm.provision "shell", inline: "write-output \"##teamcity[blockClosed name='Running Scenario #{scenario}']\""
   config.vm.provision "shell", path: "Tests/surface-logs.ps1"
+  publish_logs(config, scenario, log_files)
 end
 
 Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
@@ -150,110 +163,218 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
 
   if ENV['OctopusDSCTestMode'] != "TentacleOnly" then
     # Run DSC to install server
-    run_octopus_scenario(config, 'Server_Scenario_01_Install')
+    run_octopus_scenario(config, 
+      'Server_Scenario_01_Install', 
+      ['C:/ChezOctopus/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # Run DSC to install second HA node
-    run_octopus_scenario(config, 'Server_Scenario_02_Install_Second_Node')
+    run_octopus_scenario(config,
+      'Server_Scenario_02_Install_Second_Node', 
+      ['C:/ChezOctopus/Logs/OctopusServer.txt',
+       'C:/ChezOctopusSecondNode/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-HANode.config',
+       'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # remove the first node
-    run_octopus_scenario(config, 'Server_Scenario_03_Remove')
+    run_octopus_scenario(config,
+      'Server_Scenario_03_Remove',
+      ['C:/ChezOctopusSecondNode/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-HANode.config'])
 
     # remove the second ode
-    run_octopus_scenario(config, 'Server_Scenario_04_Remove_Second_Node')
+    run_octopus_scenario(config, 'Server_Scenario_04_Remove_Second_Node', [])
 
     # Run DSC to install server with a custom instance name
-    run_octopus_scenario(config, 'Server_Scenario_05_Install_Custom_Instance')
+    run_octopus_scenario(config, 'Server_Scenario_05_Install_Custom_Instance',
+      ['C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-MyOctopusServer.config'])
 
     # remove the server with a custom instance name
-    run_octopus_scenario(config, 'Server_Scenario_06_Remove_Custom_Instance')
+    run_octopus_scenario(config, 'Server_Scenario_06_Remove_Custom_Instance', [])
 
     # re-install old version
-    run_octopus_scenario(config, 'Server_Scenario_07_Reinstall')
+    run_octopus_scenario(config,
+      'Server_Scenario_07_Reinstall',
+      ['C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # upgrade to the latest
-    run_octopus_scenario(config, 'Server_Scenario_08_Upgrade', { "-ApiKey" => "$ENV:OctopusApiKey" })
+    run_octopus_scenario(config,
+      'Server_Scenario_08_Upgrade',
+      ['C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-OctopusServer.config'],
+      { "-ApiKey" => "$ENV:OctopusApiKey" })
 
     # install watchdog
-    run_octopus_scenario(config, 'Server_Scenario_09_Watchdog_Create')
+    run_octopus_scenario(config,
+      'Server_Scenario_09_Watchdog_Create',
+      ['C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # delete watchdog
-    run_octopus_scenario(config, 'Server_Scenario_10_Watchdog_Delete')
+    run_octopus_scenario(config,
+      'Server_Scenario_10_Watchdog_Delete',
+      ['C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # remove again prior to installing 4
-    run_octopus_scenario(config, 'Server_Scenario_11_Remove')
+    run_octopus_scenario(config, 'Server_Scenario_11_Remove',
+      ['C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # install v4
-    run_octopus_scenario(config, 'Server_Scenario_12_Built_In_Worker')
+    run_octopus_scenario(config, 'Server_Scenario_12_Built_In_Worker',
+      ['C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # remove again prior to testing "install only"
-    run_octopus_scenario(config, 'Server_Scenario_13_Remove')
+    run_octopus_scenario(config, 'Server_Scenario_13_Remove',
+      ['C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-OctopusServer.config'])
 
   end
   # install only without configure
-  run_octopus_scenario(config, 'Server_Scenario_14_Install_Without_Configure')
+  run_octopus_scenario(config, 'Server_Scenario_14_Install_Without_Configure',
+      ['C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-OctopusServer.config'])
 
   # go from installed to configured
-  run_octopus_scenario(config, 'Server_Scenario_15_Configure_Preinstalled_Instance')
+  run_octopus_scenario(config, 'Server_Scenario_15_Configure_Preinstalled_Instance',
+      ['C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-OctopusServer.config'])
 
   if ENV['OctopusDSCTestMode'] != 'ServerOnly' then
 
     config.vm.provision "shell", path: "Tests/configure-octopus-for-tentacle-tests.ps1"
 
     # initial tentacle install
-    run_tentacle_scenario(config, 'Tentacle_Scenario_01_Install', {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
-                                                                  "-ApiKey" => "$ENV:OctopusApiKey",
-                                                                  "-Environments" => "The-Env",
-                                                                  "-Roles" => "Test-Tentacle",
-                                                                  "-ServerThumbprint" => "$ENV:OctopusServerThumbprint" })
+    run_tentacle_scenario(config, 
+      'Tentacle_Scenario_01_Install',
+      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
+       'C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
+       'C:/Octopus/OctopusServer-OctopusServer.config'],
+      {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+       "-ApiKey" => "$ENV:OctopusApiKey",
+       "-Environments" => "The-Env",
+       "-Roles" => "Test-Tentacle",
+       "-ServerThumbprint" => "$ENV:OctopusServerThumbprint" })
     config.vm.provision "shell", inline: "& c:\\temp\\Tests\\register-polling-tentacle.ps1; exit $LASTEXITCODE"
     config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_01_install')
 
     # uninstall tentacle
-    run_tentacle_scenario(config, 'Tentacle_Scenario_02_Remove', {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
-                                                                  "-ApiKey" => "$ENV:OctopusApiKey",
-                                                                  "-Environments" => "The-Env",
-                                                                  "-Roles" => "Test-Tentacle",
-                                                                  "-ServerThumbprint" => "$ENV:OctopusServerThumbprint" })
+    run_tentacle_scenario(config,
+      'Tentacle_Scenario_02_Remove',
+      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
+       'C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/Logs-register-polling-tentacle.txt',
+       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+       'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
+       'C:/Octopus/OctopusServer-OctopusServer.config'],
+      {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+       "-ApiKey" => "$ENV:OctopusApiKey",
+       "-Environments" => "The-Env",
+       "-Roles" => "Test-Tentacle",
+       "-ServerThumbprint" => "$ENV:OctopusServerThumbprint" })
     config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_02_remove')
 
     # Install old version
-    run_tentacle_scenario(config, 'Tentacle_Scenario_03_Reinstall', {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
-                                                                    "-ApiKey" => "$ENV:OctopusApiKey",
-                                                                    "-Environments" => "The-Env",
-                                                                    "-Roles" => "Test-Tentacle" })
+    run_tentacle_scenario(config,
+      'Tentacle_Scenario_03_Reinstall',
+      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
+       'C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/Logs-register-polling-tentacle.txt',
+       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+       'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
+       'C:/Octopus/OctopusServer-OctopusServer.config',
+       'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
+       'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'],
+      {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+       "-ApiKey" => "$ENV:OctopusApiKey",
+       "-Environments" => "The-Env",
+       "-Roles" => "Test-Tentacle" })
     config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_03_reinstall')
 
     # Upgrade it
-    run_tentacle_scenario(config, 'Tentacle_Scenario_04_Upgrade', {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
-                                                                  "-ApiKey" => "$ENV:OctopusApiKey",
-                                                                  "-Environments" => "The-Env",
-                                                                  "-Roles" => "Test-Tentacle" })
+    run_tentacle_scenario(config,
+      'Tentacle_Scenario_04_Upgrade',
+      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
+       'C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/Logs-register-polling-tentacle.txt',
+       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+       'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
+       'C:/Octopus/OctopusServer-OctopusServer.config',
+       'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
+       'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'],
+      {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+       "-ApiKey" => "$ENV:OctopusApiKey",
+       "-Environments" => "The-Env",
+       "-Roles" => "Test-Tentacle" })
     config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_04_upgrade')
 
     # install watchdog
-    run_tentacle_scenario(config, 'Tentacle_Scenario_05_Watchdog_Create')
+    run_tentacle_scenario(config,
+      'Tentacle_Scenario_05_Watchdog_Create',
+      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
+       'C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/Logs-register-polling-tentacle.txt',
+       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+       'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
+       'C:/Octopus/OctopusServer-OctopusServer.config',
+       'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
+       'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_05_watchdog_create')
 
     # delete watchdog
-    run_tentacle_scenario(config, 'Tentacle_Scenario_06_Watchdog_Delete')
+    run_tentacle_scenario(config,
+      'Tentacle_Scenario_06_Watchdog_Delete',
+      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
+       'C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/Logs-register-polling-tentacle.txt',
+       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+       'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
+       'C:/Octopus/OctopusServer-OctopusServer.config',
+       'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
+       'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_06_watchdog_delete')
 
     # remove in preparation for testing comms port
-    run_tentacle_scenario(config, 'Tentacle_Scenario_07_Remove', {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
-                                                                  "-ApiKey" => "$ENV:OctopusApiKey",
-                                                                  "-Environments" => "The-Env",
-                                                                  "-Roles" => "Test-Tentacle" })
+    run_tentacle_scenario(config,
+      'Tentacle_Scenario_07_Remove',
+      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
+       'C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/Logs-register-polling-tentacle.txt',
+       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+       'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
+       'C:/Octopus/OctopusServer-OctopusServer.config',
+       'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
+       'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'],
+      {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+       "-ApiKey" => "$ENV:OctopusApiKey",
+       "-Environments" => "The-Env",
+       "-Roles" => "Test-Tentacle" })
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_07_remove')
 
     # tentacle comms port
-    run_tentacle_scenario(config, 'Tentacle_Scenario_08_Tentacle_Comms_Port', {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
-                                                                              "-ApiKey" => "$ENV:OctopusApiKey",
-                                                                              "-Environments" => "The-Env",
-                                                                              "-Roles" => "Test-Tentacle" })
+    run_tentacle_scenario(config,
+      'Tentacle_Scenario_08_Tentacle_Comms_Port',
+      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
+       'C:/Octopus/Logs/OctopusServer.txt',
+       'C:/Octopus/Logs-register-polling-tentacle.txt',
+       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+       'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
+       'C:/Octopus/OctopusServer-OctopusServer.config',
+       'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
+       'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'],
+      {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+       "-ApiKey" => "$ENV:OctopusApiKey",
+       "-Environments" => "The-Env",
+       "-Roles" => "Test-Tentacle" })
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_08_tentacle_comms_port')
   end
 end
